Bug 281082 - Filter view shows doubled count
Summary: Filter view shows doubled count
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.3
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-31 04:28 UTC by Robby Stephenson
Modified: 2011-08-31 04:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2011-08-31 04:28:47 UTC
Version:           2.3.3 (using KDE 4.6.4) 
OS:                Linux

The filter view shows a double count of the number of entries.



Reproducible: Didn't try

Steps to Reproduce:
i have a book collection with a boolean field "to-be-read". i have
created a named filter to show all books that i need to read.

when checking this filter, it shows the right books with the right
number of books (68). but if i open one of the entry to be read and mark
it as read, then the count of said filter becomes 136. that's strange -
any idea why?


Actual Results:  
Filter count is doubled

Expected Results:  
Filter should show correct count
Comment 1 Robby Stephenson 2011-08-31 04:31:00 UTC
Git commit b8590b2860e2fe0d843b2f488e2599e9cef9d2cc by Robby Stephenson.
Committed on 31/08/2011 at 06:29.
Pushed by rstephenson into branch '2.3'.

Don't populate the filter node twice when removing an entry

When the filter node was cleared and being repopulated, the rowCount()
function would get called in the middle of the repopulation, when would
call repopulate again, thus doubling the count.
BUG: 281082
FIXED-IN: 2.3.4

M  +7    -5    src/models/filtermodel.cpp
M  +1    -0    src/models/filtermodel.h

http://commits.kde.org/tellico/b8590b2860e2fe0d843b2f488e2599e9cef9d2cc