Don't populate the filter node twice when removing an entry

When the filter node was cleared and being repopulated, the rowCount()
function would get called in the middle of the repopulation, when would
call repopulate again, thus doubling the count.
BUG: 281082
FIXED-IN: 2.3.4